--- a/css/style.css
+++ b/css/style.css
@@ -5,33 +5,34 @@
 }
 
 .container {
+    position: relative;
     width: 100%;
     height: 100vh;
+    padding-top: 20px;
+    padding-left: 20px;
     background-image: url('https://i.imgur.com/4JUEgu4.jpg');
     background-size: cover;
 }
 
-/* .overlay {
-    position: absolute;
-    top: 5%;
-    right: 5%;
-    bottom: 50%;
-    left: 50%;
-    background-color: #47544b;
-} */
-
 .main {
-    width: 350px;
-    margin: 20px;
+    position: absolute;
+    top: 7%;
+    right: 3.5%;
+    width: 61%;
+    height: 72%;
     padding: 20px;
     border-radius: 20px;
-    background-color: lightblue;
+    background-color: #47544b;
+    color: whitesmoke;
+    text-align: center;
 }
 
 hr {
-    margin: 5px 0;
+    width: 30%;
+    margin: 10px auto;
+    color: whitesmoke;
 }
 
 #stampa {
-    line-height: 1.5;
+    line-height: 2;
 }
